--- a/src/app/pages/settings/about/about.component.html
+++ b/src/app/pages/settings/about/about.component.html
@@ -46,8 +46,12 @@
       <p>Nostria is also accessible as desktop app:</p>
       <ul>
         <li>
-          <a href="https://github.com/nostria-app/nostria/releases" target="_blank"
-            rel="noopener noreferrer">Downloads</a>
+          <a
+            href="https://github.com/nostria-app/nostria/releases"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Downloads</a
+          >
         </li>
       </ul>
 
@@ -55,14 +59,17 @@
       <p>Visit our website for more information, documentation, and support.</p>
       <ul>
         <li>
-          <a href="https://www.nostria.app" target="_blank" rel="noopener noreferrer">Nostria Website</a>
+          <a href="https://www.nostria.app" target="_blank" rel="noopener noreferrer"
+            >Nostria Website</a
+          >
         </li>
       </ul>
 
       <div class="credits-section">
         <h3>Credits & Acknowledgments</h3>
         <p>
-          We would like to extend our heartfelt gratitude to our investors who have made Nostria possible:
+          We would like to extend our heartfelt gratitude to our investors who have made Nostria
+          possible:
         </p>
         <mat-list>
           <mat-list-item>
@@ -88,7 +95,11 @@
         <h3>Useful Links</h3>
         <mat-list>
           <mat-list-item>
-            <a href="https://github.com/nostria-app/nostria" target="_blank" rel="noopener noreferrer">
+            <a
+              href="https://github.com/nostria-app/nostria"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <mat-icon>code</mat-icon>
               GitHub Repository
             </a>
@@ -100,7 +111,11 @@
             </a>
           </mat-list-item>
           <mat-list-item>
-            <a href="https://github.com/nostria-app/nostria/issues" target="_blank" rel="noopener noreferrer">
+            <a
+              href="https://github.com/nostria-app/nostria/issues"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <mat-icon>bug_report</mat-icon>
               Report Issues
             </a>
