--- a/src/app/components/content/note-content/note-content.component.html
+++ b/src/app/components/content/note-content/note-content.component.html
@@ -46,5 +46,9 @@
   } @else if (
     token.type === 'nostr-mention' &&
     (token.nostrData?.type === 'npub' || token.nostrData?.type === 'nprofile')
-  ) {&nbsp;<a class="nostr-mention" (click)="onNostrMentionClick(token)">&#64;{{ token.nostrData?.displayName }}</a>&nbsp;}
+  ) {
+    &nbsp;<a class="nostr-mention" (click)="onNostrMentionClick(token)"
+      >&#64;{{ token.nostrData?.displayName }}</a
+    >&nbsp;
+  }
 }
