refactor: extracted RepostButton component

--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -89,45 +89,13 @@
     <mat-card-actions class="note-footer">
       @if (item.event.kind === 1) {
         <app-reply-button [event]="targetItem.event"></app-reply-button>
+      }
 
-        @if (app.enabledFeature('beta')) {
-          <button
-            mat-button
-            [ngClass]="{
-              active: !!repostByCurrentAccount(),
-              'only-icon': !reposts().length && !isLoadingReposts(),
-            }"
-            [matMenuTriggerFor]="menu"
-            [disabled]="isLoadingReposts()"
-          >
-            <mat-icon>repeat</mat-icon>
-            @if (isLoadingReposts()) {
-              <mat-spinner diameter="18"></mat-spinner>
-            } @else {
-              @if (reposts().length > 0) {
-                {{ reposts().length }}
-              }
-            }
-          </button>
+      @if (app.enabledFeature('beta')) {
+        <app-repost-button [event]="targetItem.event"></app-repost-button>
+      }
 
-          <mat-menu #menu="matMenu">
-            @if (!!repostByCurrentAccount()) {
-              <button mat-menu-item (click)="deleteRepost()">
-                <mat-icon>repeat</mat-icon>
-                <span>Undo Repost</span>
-              </button>
-            } @else {
-              <button mat-menu-item (click)="createRepost()">
-                <mat-icon>repeat</mat-icon>
-                <span>Repost</span>
-              </button>
-            }
-            <button mat-menu-item (click)="createQuote()">
-              <mat-icon>format_quote</mat-icon>
-              <span>Quote</span>
-            </button>
-          </mat-menu>
-        }
+      @if (item.event.kind === 1) {
         <button
           mat-button
           [ngClass]="{
