--- a/src/app/components/event/event.component.scss
+++ b/src/app/components/event/event.component.scss
@@ -32,7 +32,9 @@
 
 .note-card {
   // border-radius: 1rem;
-  transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
+  transition:
+    box-shadow 0.2s ease-in-out,
+    transform 0.2s ease-in-out;
 
   &:hover:not(.selected) {
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
