--- a/src/app/components/event/repost-button/repost-button.component.html
+++ b/src/app/components/event/repost-button/repost-button.component.html
@@ -2,18 +2,22 @@
   mat-button
   [ngClass]="{
     active: !!repostByCurrentAccount(),
-    'only-icon': !reposts().length && !isLoadingReposts(),
+    'only-icon': view() === 'icon' && !reposts().length && !isLoadingReposts(),
   }"
   [matMenuTriggerFor]="menu"
   [disabled]="isLoadingReposts()"
-  (click)="$event.stopPropagation()"
 >
   <mat-icon>repeat</mat-icon>
   @if (isLoadingReposts()) {
     <mat-spinner diameter="18"></mat-spinner>
-  } @else {
+  } @else if (view() === 'icon') {
     @if (reposts().length > 0) {
       {{ reposts().length }}
+    }
+  } @else {
+    Repost
+    @if (reposts().length > 0) {
+      ({{ reposts().length }})
     }
   }
 </button>
