--- a/src/app/pages/article/article.component.html
+++ b/src/app/pages/article/article.component.html
@@ -1,3 +1,5 @@
+@let article = event();
+
 @if (isLoading()) {
   <!-- Loading State -->
   <div class="article-loading">
@@ -28,7 +30,7 @@
       </mat-card-content>
     </mat-card>
   </div>
-} @else if (event()) {
+} @else if (article) {
   <div class="article-container">
     <!-- Header Section -->
     <header class="article-header">
@@ -110,6 +112,8 @@
           <mat-icon>share</mat-icon>
           Share
         </button>
+
+        <app-repost-button [event]="article" [view]="'full'"></app-repost-button>
 
         <button mat-button color="primary">
           <mat-icon>comment</mat-icon>
