feat: add padding and margin to app-event for improved layout in replies

--- a/src/app/pages/event/event.component.scss
+++ b/src/app/pages/event/event.component.scss
@@ -190,6 +190,11 @@
   &:last-child {
     margin-bottom: 0;
   }
+
+  app-event {
+    padding-bottom: 0.4rem;
+    margin-bottom: 0.4rem;
+  }
 }
 
 .nested-reply {
