fix: Make sure that we encode a pubkey in the "View More Replies" button, to ensure it's able to load any data.

--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -108,7 +108,7 @@
         <button
           mat-stroked-button
           class="view-more-button"
-          (click)="onViewMoreReplies(threadedEvent.deepestReplyId!)"
+          (click)="onViewMoreReplies(threadedEvent)"
         >
           <mat-icon>expand_more</mat-icon>
           View more replies
