feat: add scrolling effect to main event after loading parent events

--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -33,7 +33,9 @@
 
   <!-- Main event -->
   @if (event()) {
-    <app-event [event]="event()" appearance="plain"></app-event>
+    <div id="main-event">
+      <app-event [event]="event()" appearance="plain" [navigationDisabled]="true"></app-event>
+    </div>
   }
 
   <!-- Loading status indicator - shows what's still loading -->
