fix: update terminology from "User Relays" to "Account Relays" for consistency in settings page

--- a/src/app/pages/settings/relays/relays.component.html
+++ b/src/app/pages/settings/relays/relays.component.html
@@ -3,7 +3,7 @@
 
   <mat-tab-group animationDuration="300ms">
     <!-- Your Relays Tab -->
-    <mat-tab label="User Relays">
+    <mat-tab label="Account Relays">
       <div class="tab-content">
         <h3>Add New Relay</h3>
 
@@ -26,10 +26,10 @@
         <mat-card class="user-relays-card">
           <app-info-tooltip
             [content]="userRelaysInfoContent"
-            ariaLabel="Learn how user relays work"
+            ariaLabel="Learn how acocunt relays work"
           ></app-info-tooltip>
           <mat-card-header>
-            <mat-card-title>User Relays</mat-card-title>
+            <mat-card-title>Account Relays</mat-card-title>
             <mat-card-subtitle
               >You have {{ userRelays().length }} relays configured</mat-card-subtitle
             >
@@ -99,7 +99,7 @@
               </p>
               <p>
                 Click the button below to update your Direct Messages Relays to be the same relays
-                as your User Relays.
+                as your Account Relays.
               </p>
               <p>
                 <button mat-flat-button (click)="updateDirectMessageRelayList()">
@@ -259,9 +259,9 @@
       </mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <p>User Relays are used to publish your profile and events for others to discovery.</p>
+      <p>Account Relays are used to publish your profile and events for others to discovery.</p>
       <p>
-        User Relays is your Home. This is where your data is stored and persisted. It's where other
+        Account Relays is your Home. This is where your data is stored and persisted. It's where other
         users retrieve your events from. Make sure you choose a relay that you trust and that is
         reliable.
       </p>
@@ -270,7 +270,7 @@
         relays, other user's will still find you thanks to Discovery Relays.
       </p>
       <p>
-        When you save User Relays, your Relays List is additionally publishes to the Discovery
+        When you save Account Relays, your Relays List is additionally publishes to the Discovery
         Relays to help others find you.
       </p>
     </mat-card-content>
